# scrapelit

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/scrapelit/: scrape.py
tests/: test_scraper.py
